--- a/src/App.css
+++ b/src/App.css
@@ -3,30 +3,29 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 14vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 1s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #79AFD7;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  font-size: calc(3px + 1vmin);
+  font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #1D438E;
+  text-shadow: 1px 1px 2px rgba(71, 68, 68, 0.479);
 }
 
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
@@ -36,3 +35,4 @@
     transform: rotate(360deg);
   }
 }
+
