--- a/src/App.css
+++ b/src/App.css
@@ -3,29 +3,30 @@
 }
 
 .App-logo {
-  height: 14vmin;
+  height: 40vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 1s linear;
+    animation: App-logo-spin infinite 20s linear;
   }
 }
 
 .App-header {
-  background-color: #79AFD7;
+  background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(3px + 1vmin);
-  font-family:  'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #1D438E;
-  text-shadow: 1px 1px 2px rgba(71, 68, 68, 0.479);
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
+.App-link {
+  color: #61dafb;
+}
 
 @keyframes App-logo-spin {
   from {
