--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,20 @@
-.App {
-  text-align: center;
+.app{
+  height: 100vh;
+  background: rgb(43, 78, 153);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.tweet{
+  height: 300px;
+  width: 300px;
+  border-radius: 30px;
+  background: rgb(255, 255, 255);
+  display: flex ;
+  box-shadow: rgba(0, 0, 0, 0.705);
   flex-direction: column;
+  justify-content: space-around;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h2{
+  align-items: center;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
- 
